--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,18 @@
 <div class="min-h-screen bg-slate-300">
-  <div class="flex flex-col">
+  <div class="flex flex-col items-center">
     <h1 class="text-primary text-center font-bold text-3xl">NBA <span class="text-red-600">Simulator</span></h1>
     <div class="flex justify-center ">
       <p-button label="Seasons" icon="pi pi-chart-pie" [rounded]="true"/>
+    </div>
+    <div class="grid grid-cols-2 md:grid-cols-5 gap-4 w-11/12 bg-red-600 mt-4 mb-6 rounded-lg">
+      @for (team of listTeams; track team.teamId){
+        <div class="card cardh flex flex-col justify-center items-center mt-2 mb-2">
+          <img
+            src={{team.logo}}
+            class="w-32 h-32 mt-2"
+          />
+        </div>
+      }
     </div>
   </div>
 </div>
