--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="flex flex-col items-center">
       <h1 class="text-primary text-center font-bold text-3xl">NBA <span class="text-red-600">Simulator</span></h1>
       <div class="flex justify-center ">
-        <p-button label="Seasons" icon="pi pi-chart-pie" [rounded]="true"/>
+        <p-button label="Seasons" icon="pi pi-chart-pie" [rounded]="true" (click)="navigate()"/>
       </div>
       <div class="grid grid-cols-2 md:grid-cols-5 gap-4 w-11/12 bg-red-600 mt-4 mb-6 rounded-lg">
         @for (team of listTeams; track team.teamId){
