--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -1,3 +1,97 @@
-<p>tournament works!</p>
+<div class="flex flex-col min-h-screen bg-slate-200">
+    <div class="flex justify-center items-center">
+        <div class="flex justify-center items-center ">
+            <h1 class="text-primary">NBA</h1>
+            <p class="text-red-600 text-lg font-bold ml-2">Edition @if(season){ {{season.edition}} }</p>
+        </div>
+    </div>
+    <div class="flex flex-col justify-center items-center mb-10">
+        <div>
+            <h2 class="text-red-600 text-2xl font-bold">Eastern Conference</h2>
+        </div>
+        <div class="w-5/6 overflow-auto">
+            @if(season && eastTeams){
+                <table class="mt-5 w-full">
+                    <thead>
+                        <tr>
+                            <th class="min-w-16 bg-primary text-white text-lg h-12"></th>
+                            <th class="min-w-24 bg-primary text-white text-lg h-12"></th>
+                            <th class="min-w-60 bg-primary text-white text-lg h-12">Team</th>
+                            <th class="min-w-28 bg-primary text-white text-lg h-12">Wins</th>
+                            <th class="min-w-28 bg-primary text-white text-lg h-12">Lost</th>
+                            <th class="min-w-28 bg-primary text-white text-lg h-12">%</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                            @for(team of eastTeams; track team.seasonTeamId; let index=$index){
+                                <tr class="h-16 bg-gray-300">
+                                    @if(index <6 ){
+                                        <td class="text-center text-primary font-bold bg-green-300">
+                                            {{ index+1 }}
+                                        </td>
+                                    }@else if(index > 5 && index <10){
+                                        <td class="text-center text-primary font-bold bg-yellow-200">
+                                            {{ index+1 }}
+                                        </td>
+                                    }@else {
+                                        <td class="text-center text-primary font-bold">
+                                            {{ index+1 }}
+                                        </td>
+                                    } 
+                                    <td class="flex justify-center"><img [src]="team.logo" alt="Logo Team" class="w-12 h-12 mt-2"></td>
+                                    <td class="text-center">{{team.name}}</td>
+                                    <td class="text-center text-primary font-bold text-xl">{{team.wins}}</td>
+                                    <td class="text-center text-red-600 font-bold text-xl">{{team.losses}}</td>
+                                    <td class="text-center font-bold text-xl">{{team.percentage}}</td>
+                                </tr>
+                            }
+                    </tbody>
+                </table>
+            }
+        </div>
+        <div>
+            <h2 class="text-primary text-2xl font-bold mt-10">Western Conference</h2>
+        </div>
 
-{{seasonId}}
+        <div class="w-5/6 overflow-auto">
+            @if(season && westTeams){
+                <table class="mt-5 w-full">
+                    <thead>
+                        <tr>
+                            <th class="min-w-16 bg-primary text-white text-lg h-12"></th>
+                            <th class="min-w-24 bg-primary text-white text-lg h-12"></th>
+                            <th class="min-w-60 bg-primary text-white text-lg h-12">Team</th>
+                            <th class="min-w-28 bg-primary text-white text-lg h-12">Wins</th>
+                            <th class="min-w-28 bg-primary text-white text-lg h-12">Lost</th>
+                            <th class="min-w-28 bg-primary text-white text-lg h-12">%</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                            @for(team of westTeams; track team.seasonTeamId; let index=$index){
+                                <tr class="h-16 bg-gray-300">
+                                    @if(index <6 ){
+                                        <td class="text-center text-primary font-bold bg-green-300">
+                                            {{ index+1 }}
+                                        </td>
+                                    }@else if(index > 5 && index <10){
+                                        <td class="text-center text-primary font-bold bg-yellow-200">
+                                            {{ index+1 }}
+                                        </td>
+                                    }@else {
+                                        <td class="text-center text-primary font-bold">
+                                            {{ index+1 }}
+                                        </td>
+                                    } 
+                                    <td class="flex justify-center"><img [src]="team.logo" alt="Logo Team" class="w-12 h-12 mt-2"></td>
+                                    <td class="text-center">{{team.name}}</td>
+                                    <td class="text-center text-primary font-bold text-xl">{{team.wins}}</td>
+                                    <td class="text-center text-red-600 font-bold text-xl">{{team.losses}}</td>
+                                    <td class="text-center font-bold text-xl">{{team.percentage}}</td>
+                                </tr>
+                            }
+                    </tbody>
+                </table>
+            }
+        </div>
+    </div>
+</div>
