--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -5,6 +5,11 @@
             <p class="text-red-600 text-lg font-bold ml-2">Edition @if(season){ {{season.edition}} }</p>
         </div>
     </div>
+    @if(!isOnPlayOffs){
+        <div class="flex justify-center items-center mb-5">
+            <button class="bg-primary text-white py-3 cursor-pointer font-bold text-lg border-2 border-red-600 rounded-lg px-16" (click)="start()">Start</button>
+        </div>
+    }
     <div class="flex flex-col justify-center items-center mb-10">
         <div>
             <h2 class="text-red-600 text-2xl font-bold">Eastern Conference</h2>
@@ -42,7 +47,7 @@
                                     <td class="text-center">{{team.name}}</td>
                                     <td class="text-center text-primary font-bold text-xl">{{team.wins}}</td>
                                     <td class="text-center text-red-600 font-bold text-xl">{{team.losses}}</td>
-                                    <td class="text-center font-bold text-xl">{{team.percentage}}</td>
+                                    <td class="text-center font-bold text-xl">{{team.percentage | number:'1.3-3'}}</td>
                                 </tr>
                             }
                     </tbody>
@@ -86,7 +91,7 @@
                                     <td class="text-center">{{team.name}}</td>
                                     <td class="text-center text-primary font-bold text-xl">{{team.wins}}</td>
                                     <td class="text-center text-red-600 font-bold text-xl">{{team.losses}}</td>
-                                    <td class="text-center font-bold text-xl">{{team.percentage}}</td>
+                                    <td class="text-center font-bold text-xl">{{team.percentage | number:'1.3-3'}}</td>
                                 </tr>
                             }
                     </tbody>
