--- a/src/app/tournament/tournament.component.html
+++ b/src/app/tournament/tournament.component.html
@@ -100,16 +100,41 @@
         </div>
     </div>
     <div class="flex flex-col justify-center items-center mb-10">
-        <div class="mt-6">
             @if(isOnPlayIn && !isOnPlayOffs){
                 <button class="bg-primary rounded-lg text-slate-200 font-bold px-5 py-3 border-2 border-red-600 cursor-pointer" (click)="startPlayIn()">Start Play In</button>
             }
             @if(isOnPlayOffs){
                 <div>
-                    <h2 class="text-2xl text-primary font-bold">Play In</h2>
+                    <h2 class="text-2xl text-primary font-bold">Play In East</h2>
                 </div>
-                
+                @for(match of playInMatchesEast; track match.matchId){
+                    <div class="bg-slate-300 mt-3 w-11/12 md:w-5/6 flex items-center justify-center rounded-lg">
+                        <img [src]="match.homeTeam?.logo" alt="Logo Team" class="w-8 ml-2 md:ml-0 h-8 md:w-12 md:h-12" />
+                        <p class="text-primary font-semibold text-sm md:text-lg ml-2 w-1/4 text-center">{{match.homeTeam?.name}}</p>
+                        <p [ngClass]="match.homeScore > match.visitorScore ? 'md:bg-green-200' : 'md:bg-white'" class="font-bold text-base md:text-xl w-8 md:w-32 text-center md:py-1 rounded-lg md:bordetr">{{match.homeScore}}</p>
+                        <p class="text-red-600 font-semibold text-tiny md:text-lg ml-1 mr-1 md:ml-2 md:mr-2">vs</p>
+                        <p [ngClass]="match.visitorScore > match.homeScore ? 'md:bg-green-200' : 'md:bg-white'" class="font-bold text-base md:text-xl w-8 md:w-32 text-center md:py-1 rounded-lg md:bordetr">{{match.visitorScore}}</p>
+                        <p class="text-primary font-semibold text-sm md:text-lg ml-2 w-1/4 text-center">{{match.visitorTeam?.name}}</p>
+                        <img [src]="match.visitorTeam?.logo" alt="Logo Team" class="w-8 mr-2 md:mr-0 h-8 md:w-12 md:h-12" />
+                    </div>
+                }
+                <div class="mt-6">
+                    <h2 class="text-2xl text-primary font-bold">Play In West</h2>
+                </div>
+                @for(match of playInMatchesWest; track match.matchId){
+                    <div class="bg-slate-300 mt-3 w-11/12 md:w-5/6 flex items-center justify-center rounded-lg">
+                        <img [src]="match.homeTeam?.logo" alt="Logo Team" class="w-8 ml-2 md:ml-0 h-8 md:w-12 md:h-12" />
+                        <p class="text-primary font-semibold text-sm md:text-lg ml-2 w-1/4 text-center">{{match.homeTeam?.name}}</p>
+                        <p [ngClass]="match.homeScore > match.visitorScore ? 'md:bg-green-200' : 'md:bg-white'" class="font-bold text-base md:text-xl w-8 md:w-32 text-center md:py-1 rounded-lg md:bordetr">{{match.homeScore}}</p>
+                        <p class="text-red-600 font-semibold text-tiny md:text-lg ml-1 mr-1 md:ml-2 md:mr-2">vs</p>
+                        <p [ngClass]="match.visitorScore > match.homeScore ? 'md:bg-green-200' : 'md:bg-white'" class="font-bold text-base md:text-xl w-8 md:w-32 text-center md:py-1 rounded-lg md:bordetr">{{match.visitorScore}}</p>
+                        <p class="text-primary font-semibold text-sm md:text-lg ml-2 w-1/4 text-center">{{match.visitorTeam?.name}}</p>
+                        <img [src]="match.visitorTeam?.logo" alt="Logo Team" class="w-8 mr-2 md:mr-0 h-8 md:w-12 md:h-12" />
+                    </div>
+                }
+                <div class="mt-6">
+                    <button class="bg-primary mt-2 rounded-lg text-slate-200 font-bold px-5 py-3 border-2 border-red-600 cursor-pointer" >Start Play Offs</button>
+                </div>      
             }
-        </div>
     </div>
 </div>
